--- a/views/producto_mas_rentable.html
+++ b/views/producto_mas_rentable.html
@@ -10,5 +10,5 @@
         <p>Volumen: {{ producto.volumen }}</p>
     </div>
 </div>
-<a href="{{ url_for('heladeria_bp.index')}}" class="btn">Regresar</a>
+<a href="{{ url_for('heladeria_bp.login')}}" class="btn">Ir al login</a>
 {% endblock %}
