Se habilita autorizacion para la interfaz web y se termina la documentación

--- a/views/components/header.html
+++ b/views/components/header.html
@@ -6,7 +6,7 @@
     </div>
     <nav>
         <ul>
-            <li><a href="{{ url_for('heladeria_bp.index')}}">Inicio</a></li>
+            <li><a href="{{ url_for('heladeria_bp.index')}}">Ver productos</a></li>
             <li><a href="{{ url_for('heladeria_bp.gestion_home')}}">Gestión</a></li>
         </ul>
     </nav>
