--- a/views/informe_ventas.html
+++ b/views/informe_ventas.html
@@ -33,5 +33,5 @@
 
     </div>
 </div>
-<a href="{{ url_for('heladeria_bp.index')}}" class="btn">Regresar</a>
+<a href="{{ url_for('heladeria_bp.gestion_home')}}" class="btn">Regresar</a>
 {% endblock %}
