--- a/views/venta_detalle.html
+++ b/views/venta_detalle.html
@@ -11,5 +11,5 @@
         <p>Resultado: {{ resultado }}</p>
     </div>
 </div>
-<a href="{{ url_for('heladeria_bp.index')}}" class="btn">Regresar</a>
+<a href="{{ url_for('heladeria_bp.gestion_home')}}" class="btn">Regresar</a>
 {% endblock %}
