Se agrega el link del Login en el header.html

--- a/views/components/header.html
+++ b/views/components/header.html
@@ -8,6 +8,7 @@
         <ul>
             <li><a href="{{ url_for('heladeria_bp.index')}}">Ver productos</a></li>
             <li><a href="{{ url_for('heladeria_bp.gestion_home')}}">Gestión</a></li>
+            <li><a href="{{ url_for('login_bp.login')}}">Login</a></li>
         </ul>
     </nav>
 </header>
